<resources>
    <string name="app_name">SpringFinal-Weather</string>
    <string name="current_day">Current Day</string>
    <string name="temp">78°C</string>
    <string name="status">Heavy rain</string>
    <string name="humidity">70%</string>
    <string name="cloud">50%</string>
    <string name="wind">80%</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="date">Date</string>
    <string name="date_status">Date Status</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="add_location">Add Location</string>
    <string name="setting">Setting</string>
    <string name="city_name">Enter city\'s name</string>
    <string name="search">Search</string>
    <string name="search_city">Search City</string>
    <string name="country_name">Country Name</string>
    <string name="allow_current_location">Allow Current Location</string>
    <string name="unit">Unit</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="shared_preference_name">mysharedpreferece</string>
    <string name="notification">Get location Failed</string>
    <string name="notification_5days_forecast">Get location Failed</string>
    <string name="connect_fail">Fail to connect to the Internet</string>
    <string name="response_fail">Fail to get response from Api</string>
    <string name="city_not_found">Sorry, but we can\'t found data of this city</string>
    <string name="get_my_location">Get Your Location</string>
    <string name="sun_status">53%</string>
    <string name="your_location">Your City</string>
</resources>
