<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCurrentDay"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/current_day" />

        <TextView
            android:id="@+id/tvCountryName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCurrentDay"
            android:text="@string/country_name" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tvCurrentDay"
            android:hint="@string/search_city"
            android:inputType="text" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/edtSearch"
            android:text="@string/search" />

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="135dp"
            android:layout_height="110dp"
            android:layout_below="@+id/tvCurrentDay"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="135dp"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/tvTemp"
            android:layout_marginRight="20dp"
            android:src="@drawable/img_sun" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTemp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"
            android:text="@string/status"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/llStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStatus"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="38dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/img_humidity"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/img_cloud"
                android:text="@string/cloud"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/img_wind"
                android:text="@string/wind"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llStatus"
            android:layout_marginTop="5dp">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
</ScrollView>
