<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvDateStatus"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tvDate"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="@string/date_status"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imgIconDate"
        android:layout_width="65dp"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/tvDate"
        android:src="@drawable/img_date" />

    <TextView
        android:id="@+id/tvMaxTempList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/imgIconDate"
        android:text="@string/max_temp"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvMinTempList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvMaxTempList"
        android:layout_below="@+id/tvDate"
        android:layout_marginTop="15dp"
        android:text="@string/min_temp"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvDateStatus"
        android:background="@color/colorBlack" />
</RelativeLayout>
