<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCurrentDay"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/current_day" />

            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="135dp"
                android:layout_height="110dp"
                android:layout_below="@+id/tvCurrentDay"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/temp"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="135dp"
                android:layout_height="110dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/tvTemp"
                android:layout_marginRight="20dp"
                android:src="@drawable/img_sun" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTemp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:text="@string/status"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/llStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvStatus"
                android:layout_marginTop="20dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="38dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/img_humidity"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvCloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/img_cloud"
                    android:text="@string/cloud"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/img_wind"
                    android:text="@string/wind"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llStatus"
                android:layout_marginTop="5dp">

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/lnDrawer"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorWhite"
        android:padding="10dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/vLine"
            android:layout_alignParentTop="true" />

        <View
            android:id="@+id/vLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/tvAddLocation"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/tvAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvSetting"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_tv_when_press"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_add_black_36dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/add_location"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_tv_when_press"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_settings_black_36dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
