<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".kotlin.activity.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgIconBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tvCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/allow_current_location"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/switchAllowCurrentLocation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <Switch
        android:id="@+id/switchAllowCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:thumb="@drawable/bg_switch_thumb"
        android:track="@drawable/bg_switch_track"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCurrentLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCurrentLocation" />

    <View
        android:id="@+id/vLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/colorViolet"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentLocation" />

    <TextView
        android:id="@+id/tvTitleUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/unit"
        android:textColor="@color/colorPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvCurrentLocation"
        app:layout_constraintTop_toBottomOf="@id/vLine1" />

    <LinearLayout
        android:id="@+id/llUnitOfTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tv_when_press"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="18dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleUnit">

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvUnitOfTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textColor="@color/colorPurplePastel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUnitOfWindSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tv_when_press"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="18dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/llUnitOfTemp">

        <TextView
            android:id="@+id/tvWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvUnitOfWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:textColor="@color/colorPurplePastel" />
    </LinearLayout>

    <View
        android:id="@+id/vLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorViolet"
        app:layout_constraintTop_toBottomOf="@+id/llUnitOfWindSpeed" />
</android.support.constraint.ConstraintLayout>
